[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_client"
version = "0.1.1"
description = "Device oriented Modbus client for Python. Focused on data meaning and data types."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["cli", "client", "data", "modbus"]
authors = [{ name = "Krystian Dużyński" }, { name = "Tomás Domínguez Bolaño" }]

dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/tombolano/modbus_client"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"modbus_client.device.devices" = ["*.yaml"]
